# httpenv

./: .gitguardian.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yml  httpenv.go  sonar-project.properties
.config/: .yaml-lint.yml
.github/: labeler.yml  renovate.json  settings.yml
.github/workflows/: branch.yml  changelog.yml  codeql.yml  cron.yml  feat.yml  main.yml  pr.yml  release.yml  semgrep.yml
app/: .coverage  Dockerfile  main.py  pyproject.toml
app/httpenv/: main.py
app/tests/: test_example.py
app/vuln/: sqli.js
chart/charts/: configmap.yml  deployment.yml  ingress.yml  ns.yml  svc.yml
docker/: Dockerfile  compose.yml
k8s/: configmap.yml  deployment.yml  ingress.yml  ns.yml  svc.yml
ops/clusters/dev/: core.yml  infra.yml  sources.yml  tenants.yml
ops/clusters/dev/flux-system/: gotk-sync.yaml
ops/core/base/reloader/: helmrelease.yml
ops/core/dev/descheduler/: kustomization.yml
ops/core/dev/eraser/: kustomization.yaml
ops/core/dev/kubereboot/: kustomization.yml
ops/core/dev/reloader/: kustomization.yml
ops/infra/base/external-secrets/: helmrelease.yml
ops/infra/base/kube-vip/: helmrelease.yml
ops/infra/base/longhorn/: helmrelease.yml
ops/infra/base/metallb/: helmrelease.yml
ops/infra/base/traefik/: helmrelease.yml
ops/infra/dev/external-secrets/: kustomization.yml  values.yml
ops/infra/dev/kube-vip/: kustomization.yml  values.yml
ops/infra/dev/longhorn/: kustomization.yml  values.yml
ops/infra/dev/metallb/: kustomization.yml  pool.yml
ops/infra/dev/traefik/: kustomization.yml  values.yml
ops/tenants/dev/apps/base/nginx/: service.yml
ops/tenants/dev/apps/dev/: namespace.yml
ops/tenants/dev/apps/dev/nginx/: kustomization.yml  values.yml
terraform/: ingress.tf
terraform/apps/: ingress.tf
terraform/dns/: a-record.conf  c-record.conf  versions.tf
terraform/node/: versions.tf
terraform/node/modules/iso/: main.tf
terraform/node/modules/lxc/: main.tf
terraform/node/modules/vm/: main.tf
