[tool.poetry]
name = "httpenv"
version = "0.1.0"
description = ""
authors = ["Simon Harvey <simon.harvey.86@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
