[tool.poetry]
name = "httpenv"
version = "0.1.0"
description = "Tiny HTTP server showing the environment variables."
authors = ["Simon Harvey <simon.harvey.86@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.4"
pytest = "^8.3.3"
ruff = "^0.9.0"


[tool.ruff]
line-length = 120


[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # PEP8 naming convetions
    "W"     # pycodestyle warnings
]
ignore = [
    "C901", # too complex
    "D401", # imperative mood
    "W191"  # indentation contains tabs
]


[tool.ruff.lint.pydocstyle]
convention = "google"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
